# curation_ops

./: README.md
add_to_milestone/: README.MD  add_to_milestone.py  github_project_issues.py
after_release/: close_issues.py  move_approved_to_done.py  move_to_done.py
archive_curation_project/: archive_project_board.py
assign_issues/: README.md  assign_issues.py
curation_validation/: .gitignore  README.md  pyproject.toml
curation_validation/curation_validation/: cli.py  runner.py
curation_validation/curation_validation/core/: exceptions.py  extract.py  geonames.py  io.py  json_utils.py  loader.py  normalize.py  patterns.py  ror_api.py
curation_validation/curation_validation/validators/: __init__.py  address_validation.py  base.py  duplicate_domains.py  duplicate_external_ids.py  duplicate_urls.py  duplicate_values.py  in_release_duplicates.py  input_file_structure.py  leading_trailing.py  new_record_integrity.py  production_duplicates.py  unprintable_chars.py  update_record_integrity.py  validate_fields.py
curation_validation/tests/: test_cli.py  test_exceptions.py  test_extract.py  test_geonames.py  test_integration.py  test_io.py  test_json_utils.py  test_loader.py  test_normalize.py  test_patterns.py  test_ror_api.py  test_runner.py
curation_validation/tests/test_validators/: test_address_validation.py  test_base.py  test_duplicate_domains.py  test_duplicate_external_ids.py  test_duplicate_urls.py  test_duplicate_values.py  test_in_release_duplicates.py  test_input_file_structure.py  test_leading_trailing.py  test_new_record_integrity.py  test_production_duplicates.py  test_unprintable_chars.py  test_update_record_integrity.py  test_validate_fields.py
diff_records/: README.md  (+2 more)
tests/validate_input_csvs/: .gitignore  README.md  pyproject.toml  requirements.txt
tests/validate_input_csvs/docs/plans/: 2026-02-05-production-duplicates-design.md  2026-02-05-production-duplicates-implementation.md
tests/validate_input_csvs/tests/: test_cli.py  test_geonames.py  test_integration.py  test_io.py  test_loader.py  test_normalize.py  test_patterns.py  test_ror_api.py
tests/validate_input_csvs/tests/fixtures/: new_records_invalid.csv  new_records_valid.csv  sample_dump.json  simple.csv
tests/validate_input_csvs/tests/test_validators/: test_address_validation.py  test_base.py  test_duplicate_external_ids.py  test_duplicate_urls.py  test_in_release_duplicates.py  test_production_duplicates.py  test_validate_fields.py
tests/validate_input_csvs/validate_ror_records_input_csvs/: cli.py  runner.py
tests/validate_input_csvs/validate_ror_records_input_csvs/core/: exceptions.py  geonames.py  io.py  loader.py  normalize.py  patterns.py  ror_api.py
tests/validate_input_csvs/validate_ror_records_input_csvs/validators/: __init__.py  address_validation.py  base.py  duplicate_external_ids.py  duplicate_urls.py  in_release_duplicates.py  production_duplicates.py  validate_fields.py
(+249 files in other folders)
